--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "react-native": "0.71.19",
     "react-native-document-picker": "^9.2.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.16.1",
-    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-image-crop-picker": "^0.41.1",
     "react-native-reanimated": "2.17.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.3.0",
-    "react-native-uuid": "^2.0.2",
-    "react-native-video": "^5.2.1",
+    "react-native-video": "6.0.0-beta.8",
     "react-native-video-duration": "^0.1.2",
-    "realm": "^12.8.0"
+    "realm": "^12.8.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,8 +42,10 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-get-random-values": "^1",
     "@types/react-native-video": "^5",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
